fixed an issue when there was a too large gap between sections in the settings page

--- a/css/index.css
+++ b/css/index.css
@@ -494,3 +494,11 @@ color-picker {
 
     margin-right:8px;
 }
+
+#settingsSection {
+    padding-top:8px;
+}
+
+#settingsSection h3 {
+    margin:0px;
+}
